// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupBody renders with scrollbars 1`] = `
.emotion-0 {
  height: 100%;
  margin-left: -30px;
  margin-right: -30px;
}

.emotion-1 {
  padding-left: 32px;
  padding-right: 32px;
}

<div
  className="emotion-0 external-class"
>
  <div
    className="emotion-1"
  >
    content
  </div>
</div>
`;

exports[`PopupBody renders without scrollbars 1`] = `
.emotion-0 {
  width: 100%;
  height: 100%;
  padding-left: 30px;
  padding-right: 30px;
  overflow: hidden;
}

<div
  className="emotion-0 external-class"
>
  content
</div>
`;
